--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: message-me
+          name: MessageMe
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
