Deployment on Render

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: MessageMe
-    databaseName: MessageMe
-    user: MessageMe
+    databaseName: messageme
+    user: messageme_user
 
 services:
   - type: web
