--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: MessageMe
+  - name: messageme
     databaseName: messageme
     user: messageme_user
 
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: MessageMe
+          name: messageme
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
